--- a/requirements.txt
+++ b/requirements.txt
@@ -180,6 +180,7 @@ pyparted==3.11.7
 pypng==0.0.20
 PyQRCode==1.2.1
 pyRFC3339==1.1
+pyTelegramBotAPI==4.19.2
 python-apt==2.4.0+ubuntu3
 python-binance==1.0.19
 python-dateutil==2.8.2
